fix z-index bug

--- a/src/app/pages/services-page/components/services-navigator/services-navigator.component.scss
+++ b/src/app/pages/services-page/components/services-navigator/services-navigator.component.scss
@@ -35,12 +35,12 @@ h2 {
   }
 
   &.active {
-    z-index: 10;
+    z-index: 1;
     transform: scale(1.1);
   }
 
   &:hover {
-    z-index: 11;
+    z-index: 2;
     transform: scale(1.14);
   }
 }
